--- a/local_rmd_nbooks/m2_strain_decon_all.Rmd
+++ b/local_rmd_nbooks/m2_strain_decon_all.Rmd
@@ -65,17 +65,17 @@ source("/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/
 ```
 
 ```{r}
-sample_set = 'Mali2'
-algn_nm = 'minmap'
-species = 'Pf'
-
-# soup_dir = "soupc"
-# sv_dir = "pbulk_gtypes_preQC"
-
-soup_dir = "soupc_GE_postQC"
-sv_dir = "pbulk_gtypes_GE_postQC"
-
-strain_levels_univrs <- c(paste0("SC", 1:20), "Doublet", "Negative")
+# sample_set = 'Mali2'
+# algn_nm = 'minmap'
+# species = 'Pf'
+# 
+# # soup_dir = "soupc"
+# # sv_dir = "pbulk_gtypes_preQC"
+# 
+# soup_dir = "soupc_GE_postQC"
+# sv_dir = "pbulk_gtypes_GE_postQC"
+# 
+# strain_levels_univrs <- c(paste0("SC", 1:20), "Doublet", "Negative")
 ```
 
 ```{r setup}
@@ -86,62 +86,67 @@ knitr::opts_knit$set(root.dir = '/lustre/scratch126/tol/teams/lawniczak/users/jr
 ## Declare variables
 
 ```{r}
-##Copy souporcell files for the optimum clusters
+# ##Copy souporcell files for the optimum clusters
+# 
+# ##Sample ID
+# # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66") %>% sort()
+# ## All sample ids removing "MSC38" which seems to have lots of doublets
+# sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70", "MSC41", "MSC51", "MSC25")
+# 
+# # sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60") %>% sort()
+# # algn_nms = c('minmap', 'hsat', 'lr_ref')
+# algn_nms = c('minmap', 'hsat')
+# 
+# sample_name_nms_al <- rep(sample_name_nms, length(algn_nms))
+# algn_nms_al <- rep(algn_nms, each= length(sample_name_nms))
+# 
+# sm_aln_nms_al <- paste(rep(sample_name_nms, length(algn_nms)), rep(algn_nms, each= length(sample_name_nms)), sep ='_')
+# 
+# ## number of optimum clusters to investigate per sample
+# # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11))
+# # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6))
+# 
+# # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6), "MSC24" = c(2:6), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(2:6), "MSC50_SLO" = c(2:6), "MSC54" = c(2:6), "MSC67" = c(2:6), "MSC68" = c(2:6), "MSC70" = c(2:6))
+# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(4:8), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(1:3), "MSC57" = c(1:3), "MSC24" = c(1:3), "MSC37" = c(5:9), "MSC39" = c(2:6), "MSC45" = c(1:3), "MSC50_SLO" = c(2:6), "MSC54" = c(1:3), "MSC67" = c(1:3), "MSC68" = c(2:6), "MSC70" = c(1:3), "MSC41"= c(2:6), "MSC51"= c(1:5), "MSC25"= c(2:6))
+# 
+# 
+# # opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9))
+# # opt_clusters_nms <- list("MSC33" = c(3:9),"MSC48" = c(2:3),"MSC49" = c(2:6),"MSC55" = c(4:10),"MSC60" = c(2:7), "MSC66")
+# 
+# opt_clusters_len <- map(opt_clusters_nms, length)
+# 
+# ## number of optimum clusters to investigate per sample factoring the 2 alignments
+# opt_clusters_nms_aln <- rep(opt_clusters_nms, length(algn_nms)) %>% set_names(sm_aln_nms_al)
+# opt_clusters_len_aln <- map(opt_clusters_nms_aln, length)
+# 
+# ##Sample IDs
+# # source_irods_nms <- list("5736STDY13782211","5736STDY13782212","5736STDY13782213","5736STDY13782214","5736STDY13782215", "5736STDY13437393") %>% set_names(sample_name_nms)
+# # source_irods_nms <- list("5736STDY13782211","5736STDY13782212","5736STDY13782213","5736STDY13782214","5736STDY13782215") %>% set_names(sample_name_nms)
+# 
+# # source_irods <- map2(source_irods_nms, opt_clusters_len[names(source_irods_nms)], ~rep(.x, each = .y))
+# 
+# # source_irods <- unlist(flatten(source_irods))
+# 
+# ##Samples
+# sample_name <- map2(sample_name_nms, opt_clusters_len[sample_name_nms], ~rep(.x, each = .y))
+# 
+# opt_clusters <- unlist(flatten(opt_clusters_nms[sample_name_nms]))
+# 
+# sample_name <- unlist(flatten(sample_name))
+# 
+# ## sorted donor_opt_cluster names
+# sorted_names <- paste0(sample_name, "_", opt_clusters)
+# 
+# ## sorted factoring alignment
+# sorted_names_al <-paste0(sample_name, "_",rep(algn_nms,each=length(sample_name)),"_", opt_clusters)
+# 
+# iter = opt_clusters_len
 
-##Sample ID
-# sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66") %>% sort()
-## All sample ids removing "MSC38" which seems to have lots of doublets
-sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60", "MSC66", "MSC38", "MSC40", "MSC50_MACS", "MSC53", "MSC57", "MSC24", "MSC37", "MSC39", "MSC45", "MSC50_SLO", "MSC54", "MSC67", "MSC68", "MSC70", "MSC41", "MSC51", "MSC25")
-
-# sample_name_nms <- c("MSC33", "MSC48","MSC49", "MSC55", "MSC60") %>% sort()
-# algn_nms = c('minmap', 'hsat', 'lr_ref')
-algn_nms = c('minmap', 'hsat')
-
-sample_name_nms_al <- rep(sample_name_nms, length(algn_nms))
-algn_nms_al <- rep(algn_nms, each= length(sample_name_nms))
-
-sm_aln_nms_al <- paste(rep(sample_name_nms, length(algn_nms)), rep(algn_nms, each= length(sample_name_nms)), sep ='_')
-
-## number of optimum clusters to investigate per sample
-# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11))
-# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(2:6), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6))
-
-# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(2:6), "MSC57" = c(2:6), "MSC24" = c(2:6), "MSC37" = c(5:9), "MSC39" = c(3:7), "MSC45" = c(2:6), "MSC50_SLO" = c(2:6), "MSC54" = c(2:6), "MSC67" = c(2:6), "MSC68" = c(2:6), "MSC70" = c(2:6))
-opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9), "MSC66" = c(7:11), "MSC38" = c(4:8), "MSC40" = c(6:10), "MSC50_MACS" = c(2:6), "MSC53" = c(1:3), "MSC57" = c(1:3), "MSC24" = c(1:3), "MSC37" = c(5:9), "MSC39" = c(2:6), "MSC45" = c(1:3), "MSC50_SLO" = c(2:6), "MSC54" = c(1:3), "MSC67" = c(1:3), "MSC68" = c(2:6), "MSC70" = c(1:3), "MSC41"= c(2:6), "MSC51"= c(1:5), "MSC25"= c(2:6))
+```
 
 
-# opt_clusters_nms <- list("MSC33" = c(6:10),"MSC48" = c(3:7),"MSC49" = c(5:9),"MSC55" = c(4:8),"MSC60" = c(5:9))
-# opt_clusters_nms <- list("MSC33" = c(3:9),"MSC48" = c(2:3),"MSC49" = c(2:6),"MSC55" = c(4:10),"MSC60" = c(2:7), "MSC66")
-
-opt_clusters_len <- map(opt_clusters_nms, length)
-
-## number of optimum clusters to investigate per sample factoring the 2 alignments
-opt_clusters_nms_aln <- rep(opt_clusters_nms, length(algn_nms)) %>% set_names(sm_aln_nms_al)
-opt_clusters_len_aln <- map(opt_clusters_nms_aln, length)
-
-##Sample IDs
-# source_irods_nms <- list("5736STDY13782211","5736STDY13782212","5736STDY13782213","5736STDY13782214","5736STDY13782215", "5736STDY13437393") %>% set_names(sample_name_nms)
-# source_irods_nms <- list("5736STDY13782211","5736STDY13782212","5736STDY13782213","5736STDY13782214","5736STDY13782215") %>% set_names(sample_name_nms)
-
-# source_irods <- map2(source_irods_nms, opt_clusters_len[names(source_irods_nms)], ~rep(.x, each = .y))
-
-# source_irods <- unlist(flatten(source_irods))
-
-##Samples
-sample_name <- map2(sample_name_nms, opt_clusters_len[sample_name_nms], ~rep(.x, each = .y))
-
-opt_clusters <- unlist(flatten(opt_clusters_nms[sample_name_nms]))
-
-sample_name <- unlist(flatten(sample_name))
-
-## sorted donor_opt_cluster names
-sorted_names <- paste0(sample_name, "_", opt_clusters)
-
-## sorted factoring alignment
-sorted_names_al <-paste0(sample_name, "_",rep(algn_nms,each=length(sample_name)),"_", opt_clusters)
-
-iter = opt_clusters_len
-
+```{r}
+source('/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/local_rmd_nbooks/m2_strain_decon_all_GE_postQC_header.R')
 ```
 
 
