--- a/local_rmd_nbooks/m2_strain_decon_all.Rmd
+++ b/local_rmd_nbooks/m2_strain_decon_all.Rmd
@@ -151,7 +151,7 @@ source('/lustre/scratch126/tol/teams/lawniczak/users/jr35/phd/Mali2/mali22_code/
 
 
 ```{r, eval=F}
-##Copy souporcell files for the optimum clusters
+### Copy souporcell files for the optimum clusters
 
 for (i in 1:length(sample_name)) {
   for (a in 1:length(algn_nms)) {
